# codename

./: .gitignore  CMakeLists.txt  README  TODO  dico  run.sh
includes/: color.hh  game.hh  grid.hh  play.hh  position.hh  print.hh  tools.hh  word.hh
src/: color.cpp  dico.cpp  game.cpp  grid.cpp  main.cpp  play.cpp  position.cpp  print.cpp  tools.cpp  word.cpp
